// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetRepository Should fetch existing verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository Should fetch verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository should fetch a asset data 1`] = `
Array [
  Object {
    "asset_types": Array [
      Object {
        "id": 1,
        "name": "Residential House",
      },
      Object {
        "id": 2,
        "name": "Apartment / Condo",
      },
      Object {
        "id": 3,
        "name": "Villa",
      },
      Object {
        "id": 4,
        "name": "Penthouse",
      },
      Object {
        "id": 5,
        "name": "Studio Apartment",
      },
      Object {
        "id": 6,
        "name": "Independant Floor",
      },
    ],
    "id": 1,
    "name": "Residential",
    "space_types": Array [
      Object {
        "id": 1,
        "name": "Bedroom",
      },
      Object {
        "id": 2,
        "name": "Bathroom",
      },
      Object {
        "id": 3,
        "name": "Balcony",
      },
    ],
  },
  Object {
    "asset_types": Array [
      Object {
        "id": 7,
        "name": "Commercial Office Space",
      },
      Object {
        "id": 8,
        "name": "Office in IT park/SEZ",
      },
      Object {
        "id": 9,
        "name": "Commercial Showroom",
      },
      Object {
        "id": 10,
        "name": "Warehouse / Godown",
      },
    ],
    "id": 2,
    "name": "Commercial",
    "space_types": Array [
      Object {
        "id": 2,
        "name": "Bathroom",
      },
    ],
  },
]
`;

exports[`AssetRepository should fetch a asset detail 1`] = `
Asset {
  "_assetGroup": Data {
    "_count": 0,
    "_id": "",
    "_name": "",
  },
  "_assetType": Data {
    "_count": 0,
    "_id": "",
    "_name": "",
  },
  "_blockNumber": "#12",
  "_carpetArea": "12",
  "_carpetAreaUnit": "Sqt",
  "_floorNumber": 2,
  "_id": 4,
  "_images": Array [],
  "_latitude": "0.9999",
  "_longitude": "0.24444",
  "_projectName": "Project",
  "_spaces": Array [],
  "_totalFloors": 5,
  "_unitNumber": "12",
}
`;

exports[`AssetRepository should fetch a lease term 1`] = `
Array [
  Object {
    "annual_increment_percentage": 5,
    "available_from_date": "2020-09-12",
    "currency_code": "+91",
    "furnishing_status": "SEMI",
    "id": 1,
    "maintenance_amount": 1,
    "maintenance_paid_by": "OWNER",
    "maintenance_schedule": "MONTHLY",
    "minimum_lease_period": 2,
    "monthly_rent_price": 1200,
    "security_deposit_price": 15000,
    "utility_paid_by": "OWNER",
  },
]
`;

exports[`AssetRepository should fetch a sale term 1`] = `
Array [
  Object {
    "available_from_date": "2020-09-12",
    "booking_amount": 500,
    "currency_code": "+91",
    "expected_price": 1200,
    "id": 1,
    "maintenance_amount": 200,
    "maintenance_schedule": "MONTHLY",
    "year_of_construction": 1,
  },
]
`;
